CB-26872 Mark instance status as under decomission when issuing repair or downscale